--- a/app/src/main/res/layout/intruduction_page.xml
+++ b/app/src/main/res/layout/intruduction_page.xml
@@ -8,12 +8,14 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="382dp"
-        android:layout_height="59dp"
-        tools:layout_editor_absoluteX="26dp">
+        android:layout_height="38dp"
+        tools:layout_editor_absoluteX="26dp"
+        tools:layout_editor_absoluteY="-10dp">
 
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.widget.NestedScrollView
+        android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_anchor="@+id/appbar"
@@ -30,11 +32,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:text="item_name"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
                 android:textSize="28sp" />
 
             <TextView
                 android:id="@+id/price"
                 android:layout_width="match_parent"
+                android:layout_marginLeft="10dp"
                 android:layout_height="49dp"
                 android:text="price"
                 android:textSize="28sp" />
@@ -43,6 +48,7 @@
                 android:id="@+id/sales_person"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
+                android:layout_marginLeft="10dp"
                 android:text="sales_person"
                 android:textSize="20sp" />
 
@@ -51,6 +57,7 @@
                 style="@android:style/Widget.AutoCompleteTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:ems="10"
                 android:inputType="date"
                 android:text="post_time"
@@ -61,6 +68,8 @@
                 style="@android:style/Widget.Holo.AutoCompleteTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:editable="false"
                 android:ems="10"
                 android:inputType="textPostalAddress"
@@ -71,18 +80,19 @@
                 android:id="@+id/imageView"
                 android:layout_width="match_parent"
                 android:layout_height="234dp"
+                android:layout_marginTop="16dp"
                 app:srcCompat="@mipmap/ic_launcher" />
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="51dp"
+        android:layout_height="48dp"
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
         android:clickable="true"
         android:src="@android:drawable/sym_action_email"
-        app:layout_anchor="@+id/appbar"
-        app:layout_anchorGravity="right|bottom" />
+        app:layout_anchor="@+id/nestedScrollView"
+        app:layout_anchorGravity="right|top" />
 </android.support.design.widget.CoordinatorLayout>
