--- a/app/src/main/res/layout/content_introduction_page.xml
+++ b/app/src/main/res/layout/content_introduction_page.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.ciheng.shoppingmap.intruductionPage"
+    tools:context="com.example.ciheng.shoppingmap.introductionPage"
     tools:showIn="@layout/intruduction_page">
 
     <TextView
