--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -7,35 +7,36 @@
     android:layout_height="match_parent"
     android:background="@drawable/bg_gradient"
     tools:context=".View.navigation">
+
     <Button
-        android:id="@+id/buttonDiscover"
+        android:id="@+id/buttonSell"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/buttonStorage"
-        android:layout_alignStart="@+id/buttonStorage"
-        android:layout_alignRight="@+id/buttonStorage"
-        android:layout_alignEnd="@+id/buttonStorage"
-        android:layout_below="@+id/buttonStorage"
+        android:layout_alignEnd="@+id/buttonLogin"
+        android:layout_alignLeft="@+id/buttonLogin"
+        android:layout_alignRight="@+id/buttonLogin"
+        android:layout_alignStart="@+id/buttonLogin"
+        android:layout_below="@+id/buttonLogin"
         android:layout_marginTop="30dp"
         android:background="@drawable/button_style"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:text="DISCOVER"
+        android:text="I want to sell"
         android:textColor="@android:color/white"
         android:textSize="25sp"/>
 
     <Button
-        android:id="@+id/buttonStorage"
+        android:id="@+id/buttonLogin"
 
-        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/buttonMap"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         android:background="@drawable/button_style"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:text="Check storage"
+        android:text="User Login"
         android:textColor="@android:color/white"
         android:textSize="25sp"/>
 
@@ -45,10 +46,10 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_alignLeft="@+id/buttonStorage"
-        android:layout_alignStart="@+id/buttonStorage"
-        android:layout_alignRight="@+id/buttonStorage"
-        android:layout_alignEnd="@+id/buttonStorage"
+        android:layout_alignLeft="@+id/buttonLogin"
+        android:layout_alignStart="@+id/buttonLogin"
+        android:layout_alignRight="@+id/buttonLogin"
+        android:layout_alignEnd="@+id/buttonLogin"
         android:background="@drawable/button_style"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
@@ -64,11 +65,11 @@
 
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:layout_alignLeft="@+id/buttonStorage"
-        android:layout_alignStart="@+id/buttonStorage"
-        android:layout_alignRight="@+id/buttonStorage"
-        android:layout_alignEnd="@+id/buttonStorage"
-        android:layout_below="@+id/buttonDiscover"
+        android:layout_alignLeft="@+id/buttonLogin"
+        android:layout_alignStart="@+id/buttonLogin"
+        android:layout_alignRight="@+id/buttonLogin"
+        android:layout_alignEnd="@+id/buttonLogin"
+        android:layout_below="@+id/buttonSell"
         android:background="@drawable/button_style"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
