--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -12,45 +12,24 @@
         android:id="@+id/buttonSell"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/buttonLogin"
-        android:layout_alignLeft="@+id/buttonLogin"
-        android:layout_alignRight="@+id/buttonLogin"
-        android:layout_alignStart="@+id/buttonLogin"
-        android:layout_below="@+id/buttonLogin"
-        android:layout_marginTop="30dp"
+        android:layout_above="@+id/buttonMap"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="27dp"
         android:background="@drawable/button_style"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:text="to sell"
         android:textColor="@android:color/white"
-        android:textSize="25sp"/>
-
-    <Button
-        android:id="@+id/buttonLogin"
-
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/buttonMap"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
-        android:background="@drawable/button_style"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:text="User Login"
-        android:textColor="@android:color/white"
-        android:textSize="25sp"/>
+        android:textSize="25sp" />
 
     <Button
         android:id="@+id/buttonMap"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/buttonLogin"
-        android:layout_alignLeft="@+id/buttonLogin"
-        android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/buttonLogin"
-        android:layout_alignStart="@+id/buttonLogin"
-        android:layout_marginTop="93dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:background="@drawable/button_style"
+        android:onClick="discover"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:text="Discover"
@@ -62,19 +41,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:layout_centerVertical="true"
+        android:layout_below="@+id/buttonMap"
         android:layout_centerHorizontal="true"
-        android:layout_alignLeft="@+id/buttonLogin"
-        android:layout_alignStart="@+id/buttonLogin"
-        android:layout_alignRight="@+id/buttonLogin"
-        android:layout_alignEnd="@+id/buttonLogin"
-        android:layout_below="@+id/buttonSell"
+        android:layout_marginTop="29dp"
         android:background="@drawable/button_style"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:layout_marginTop="30dp"
         android:text="HISTORY"
         android:textColor="@android:color/white"
-        android:textSize="25sp"/>
+        android:textSize="25sp" />
 
 </RelativeLayout>
