--- a/app/src/main/res/layout/intruduction_page.xml
+++ b/app/src/main/res/layout/intruduction_page.xml
@@ -82,6 +82,12 @@
                 android:layout_height="234dp"
                 android:layout_marginTop="16dp"
                 app:srcCompat="@mipmap/ic_launcher" />
+
+            <TextView
+                android:id="@+id/introduction"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 
