--- a/app/src/main/res/layout/intruduction_page.xml
+++ b/app/src/main/res/layout/intruduction_page.xml
@@ -52,18 +52,7 @@
                 android:text="sales_person"
                 android:textSize="20sp" />
 
-            <EditText
-                android:id="@+id/post_time"
-                style="@android:style/Widget.AutoCompleteTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:ems="10"
-                android:inputType="date"
-                android:text="post_time"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
-
-            <EditText
+            <TextView
                 android:id="@+id/adress"
                 style="@android:style/Widget.Holo.AutoCompleteTextView"
                 android:layout_width="match_parent"
@@ -74,7 +63,7 @@
                 android:ems="10"
                 android:inputType="textPostalAddress"
                 android:text="address"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
+                android:textAppearance="@android:style/TextAppearance.Material.Small" />
 
             <ImageView
                 android:id="@+id/imageView"
@@ -83,11 +72,12 @@
                 android:layout_marginTop="16dp"
                 app:srcCompat="@mipmap/ic_launcher" />
 
-            <TextView
+            <EditText
                 android:id="@+id/introduction"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:ems="10"
+                android:inputType="textMultiLine" />
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 
