--- a/app/src/main/res/layout/content_sellan_item.xml
+++ b/app/src/main/res/layout/content_sellan_item.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.ciheng.shoppingmap.View.SellanItem"
+    tools:context="com.example.ciheng.shoppingmap.View.addProductActivity"
     tools:showIn="@layout/activity_sellan_item">
 
 </android.support.constraint.ConstraintLayout>
