--- a/app/src/main/res/layout/activity_selling_list.xml
+++ b/app/src/main/res/layout/activity_selling_list.xml
@@ -28,9 +28,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:backgroundTint="@android:color/holo_orange_light"
+        android:tint="@color/place_autocomplete_search_hint"
+        app:backgroundTint="@android:color/holo_blue_dark"
         app:fabSize="normal"
-        app:rippleColor="@android:color/background_light"
+        app:rippleColor="@android:color/holo_orange_light"
         app:srcCompat="@android:drawable/ic_input_add" />
 
 </android.support.design.widget.CoordinatorLayout>
