--- a/app/src/main/res/layout/intruduction_page.xml
+++ b/app/src/main/res/layout/intruduction_page.xml
@@ -31,9 +31,9 @@
                 android:id="@+id/item_name"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:text="item_name"
-                android:layout_marginTop="10dp"
                 android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:text="item_name"
                 android:textSize="28sp" />
 
             <TextView
@@ -63,7 +63,8 @@
                 android:ems="10"
                 android:inputType="textPostalAddress"
                 android:text="address"
-                android:textAppearance="@android:style/TextAppearance.Material.Small" />
+                android:textAppearance="@android:style/TextAppearance.Material.Small"
+                tools:ignore="NewApi" />
 
             <ImageView
                 android:id="@+id/imageView"
@@ -77,6 +78,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:hint="discreption"
                 android:inputType="textMultiLine" />
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
@@ -89,6 +91,7 @@
         android:layout_margin="16dp"
         android:clickable="true"
         android:src="@android:drawable/sym_action_email"
+        app:backgroundTint="@android:color/holo_orange_light"
         app:layout_anchor="@+id/nestedScrollView"
         app:layout_anchorGravity="right|top" />
 
@@ -97,8 +100,10 @@
         android:layout_width="49dp"
         android:layout_height="52dp"
         android:clickable="true"
+        app:backgroundTint="@android:color/holo_blue_dark"
         app:layout_anchor="@+id/nestedScrollView"
         app:layout_anchorGravity="right|bottom"
+        app:rippleColor="@android:color/holo_blue_dark"
         app:srcCompat="@android:drawable/btn_star"
         tools:layout_editor_absoluteX="335dp"
         tools:layout_editor_absoluteY="459dp" />
