--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -5,7 +5,7 @@
         <item name="android:navigationBarColor">@color/colorPrimary</item>
         <item name="android:textColorPrimary">@color/colorTitle</item>
         <item name="android:statusBarColor">?android:attr/colorPrimary</item>
-        <item name="android:windowBackground">?android:attr/colorAccent</item>
+        <item name="android:windowBackground">?attr/colorBackgroundFloating</item>
         <item name="android:colorBackground">@color/background_material_light</item>
     </style>
 </resources>
