--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#5bb9e3</color>
     <color name="colorPrimaryDark">#b7c0c7</color>
-    <color name="colorAccent">#FFFFFF</color>
+    <color name="colorAccent">#fcea75</color>
     <color name="colorTitle">#025081</color>
     <color name="foreground_material_light">#066fa3</color>
     <color name="background_material_light">#ffffff</color>
