--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,6 +29,7 @@
         <item name="android:colorForeground">@color/foreground_material_light</item>
         <item name="android:textColorPrimary">@color/colorTitle</item>
         <item name="android:colorBackground">@color/background_material_light</item>
+        <item name="android:windowBackground">?attr/colorBackgroundFloating</item>
     </style>
 
 </resources>
