oyp: firebase ok

--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -24,13 +24,13 @@
                 app:popupTheme="@style/AppTheme.PopupOverlay" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/addProductTextview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Input the item you want to sell"
-                android:textSize="25dp" />
+                android:text="Upload a new product"
+                android:textSize="25sp" />
 
         </android.support.design.widget.AppBarLayout>
 
@@ -67,16 +67,22 @@
             <ImageView
                 android:id="@+id/picture"
                 android:layout_width="match_parent"
-                android:layout_height="255dp"
-                app:srcCompat="@drawable/ic_menu_camera" />
+                android:layout_height="233dp"
+                app:srcCompat="@drawable/ic_menu_camera"/>
 
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
+
                 <Button
-                    android:id="@+id/photo"
+                    android:id="@+id/photoButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -84,7 +90,7 @@
                     android:text="take a photo" />
 
                 <Button
-                    android:id="@+id/gallery"
+                    android:id="@+id/galleryButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -93,7 +99,7 @@
             </LinearLayout>
 
             <Button
-                android:id="@+id/ok"
+                android:id="@+id/sellButton"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
