oyp: improvement on image uploading

--- a/app/src/main/res/layout/activity_buyer.xml
+++ b/app/src/main/res/layout/activity_buyer.xml
@@ -22,19 +22,19 @@ tools:context=".View.BuyerActivity">
     android:textSize="25sp"
     />
 
-<Button
-    android:id="@+id/wish_listButton"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_alignParentBottom="true"
-    android:layout_centerHorizontal="true"
-    android:layout_marginBottom="155dp"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp"
-    android:text="my wish list"
-    android:textSize="25sp"
-    android:layout_alignLeft="@+id/discoverButton"
-    android:layout_alignRight="@+id/discoverButton"/>
+    <Button
+        android:id="@+id/wish_listButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/discoverButton"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/discoverButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="155dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:text="my wish list"
+        android:textSize="25sp"/>
 
 <Button
     android:id="@+id/seller_messageButton"
