--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -8,7 +8,7 @@
     tools:context=".View.navigationActivity">
 
     <Button
-        android:id="@+id/sellerButton"
+        android:id="@+id/sellButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/buyerButton"
@@ -29,8 +29,8 @@
         android:paddingRight="10dp"
         android:text="I am a buyer"
         android:textSize="25sp"
-        android:layout_alignLeft="@+id/sellerButton"
-        android:layout_alignRight="@+id/sellerButton"
+        android:layout_alignLeft="@+id/sellButton"
+        android:layout_alignRight="@+id/sellButton"
         />
 
 </RelativeLayout>
