made the frame of message system and made some bugs

--- a/app/src/main/res/layout/activity_send_message.xml
+++ b/app/src/main/res/layout/activity_send_message.xml
@@ -43,7 +43,7 @@
             app:srcCompat="@drawable/product" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/product"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -51,7 +51,7 @@
     </LinearLayout>
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/message"
         android:layout_width="382dp"
         android:layout_height="258dp"
         android:layout_weight="1"
@@ -64,6 +64,7 @@
         android:id="@+id/send"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="send"
         android:text="SEND"
         tools:layout_editor_absoluteX="148dp"
         tools:layout_editor_absoluteY="397dp" />
