--- a/app/src/main/res/layout/activity_message_list_buyer.xml
+++ b/app/src/main/res/layout/activity_message_list_buyer.xml
@@ -1,27 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="10dp"
     tools:context="com.example.ciheng.shoppingmap.View.MessageList_Buyer">
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swipe_ly"
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-
-    <ListView
-        android:layout_width="fill_parent"
-        android:layout_height="400dp"
-        android:id="@+id/listView1"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_above="@+id/button">
-
-    </ListView>
-
-
-    </android.support.v4.widget.SwipeRefreshLayout>
-
+        android:layout_height="wrap_content"
+        android:background="#EEEEEE"
+        android:orientation="vertical" />
 </RelativeLayout>
