--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -30,7 +30,7 @@
 
 
         <TextView
-            android:id="@+id/message"
+            android:id="@+id/messages"
             android:layout_width="match_parent"
             android:layout_height="32dp"
             android:layout_marginTop="2dp"
