--- a/app/src/main/res/layout/activity_message_list_buyer.xml
+++ b/app/src/main/res/layout/activity_message_list_buyer.xml
@@ -6,10 +6,18 @@
     android:layout_height="match_parent"
     tools:context="com.example.ciheng.shoppingmap.View.MessageList_Buyer">
 
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#EEEEEE"
         android:orientation="vertical" />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
