--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -28,7 +28,8 @@
             android:layout_width="121dp"
             android:layout_height="135dp"
             android:scaleType="centerCrop"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@mipmap/ic_launcher"
+            app:srcCompat="@drawable/common_google_signin_btn_icon_light" />
 
 
         <LinearLayout
