--- a/app/src/main/res/layout/content_product_detail.xml
+++ b/app/src/main/res/layout/content_product_detail.xml
@@ -14,16 +14,16 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/productPic"
             android:layout_width="match_parent"
             android:layout_height="249dp"
-            app:srcCompat="@drawable/ic_menu_gallery" />
+            app:srcCompat="@drawable/ic_menu_gallery"/>
 
         <TextView
             android:id="@+id/itemName"
             android:layout_width="match_parent"
             android:layout_height="44dp"
-            android:text="TextView" />
+            android:text="name" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -31,17 +31,17 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/imageView4"
+                android:id="@+id/priceIcon"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                app:srcCompat="@drawable/euro" />
+                app:srcCompat="@drawable/euro"/>
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/price"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="TextView" />
+                android:text="price"/>
         </LinearLayout>
 
         <LinearLayout
@@ -50,18 +50,18 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/imageView5"
+                android:id="@+id/ownerIcon"
                 android:layout_width="59dp"
                 android:layout_height="30dp"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/people" />
+                app:srcCompat="@drawable/people"/>
 
             <TextView
                 android:id="@+id/sellerName"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="TextView" />
+                android:text="owner name" />
 
         </LinearLayout>
 
@@ -71,28 +71,25 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/imageView3"
+                android:id="@+id/locationIcon"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                app:srcCompat="@drawable/location" />
+                app:srcCompat="@drawable/location"/>
 
-            <EditText
-                android:id="@+id/editText4"
+            <TextView
+                android:id="@+id/address"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:ems="10"
-                android:inputType="textPostalAddress" />
+                android:text="address"/>
 
         </LinearLayout>
 
-        <EditText
+        <TextView
             android:id="@+id/description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:inputType="textMultiLine" />
+            android:text="description"/>
 
     </LinearLayout>
 
