--- a/app/src/main/res/layout/content_product_detail.xml
+++ b/app/src/main/res/layout/content_product_detail.xml
@@ -16,7 +16,7 @@
         <ImageView
             android:id="@+id/productPic"
             android:layout_width="match_parent"
-            android:layout_height="249dp"
+            android:layout_height="280dp"
             app:srcCompat="@drawable/ic_menu_gallery"/>
 
         <TextView
@@ -89,7 +89,7 @@
             android:id="@+id/description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="description"/>
+            android:text="descriptio"/>
 
     </LinearLayout>
 
