--- a/app/src/main/res/layout/activity_message_list_buyer.xml
+++ b/app/src/main/res/layout/activity_message_list_buyer.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.ciheng.shoppingmap.View.MessageList_Buyer">
+    tools:context="com.example.ciheng.shoppingmap.View.MessageList">
 
 
     <android.support.v4.widget.SwipeRefreshLayout
