--- a/app/src/main/res/layout/content_wishlist.xml
+++ b/app/src/main/res/layout/content_wishlist.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -8,12 +9,14 @@
         style="@style/CardView.Content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp">
 
 
         <ImageView
             android:id="@+id/wishlist_photo"
-            android:layout_width="121dp"
+            android:layout_width="131dp"
             android:layout_height="135dp"
             android:scaleType="centerCrop"
             android:src="@mipmap/ic_launcher" />
