--- a/app/src/main/res/layout/activity_message_list_buyer.xml
+++ b/app/src/main/res/layout/activity_message_list_buyer.xml
@@ -13,12 +13,13 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#EEEEEE"
-        android:orientation="vertical" />
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#EEEEEE"
+            android:orientation="vertical"
+            tools:listitem="@layout/list_item" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
