--- a/app/src/main/res/layout/content_product_detail.xml
+++ b/app/src/main/res/layout/content_product_detail.xml
@@ -66,7 +66,6 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/product_address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -78,9 +77,9 @@
                 app:srcCompat="@drawable/location" />
 
             <TextView
-                android:id="@+id/address"
+                android:id="@+id/product_address"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="address" />
 
